管道焊口无损检测结果通知单，同时将doc 统一调整为docx

--- a/需求.md
+++ b/需求.md
@@ -6,4 +6,15 @@
    5）excel 表格 G列“规格” 对应 word 文档 “焊口规格”
    6）excel 表格 H列“材质” 对应 word 文档 “焊口材质”
 
-   excel 表格路径为 “生成器\Excel\1_生成器台账_委托.xlsx”，word 文档模板为 “生成器\wod\1_新RX3-03-ZYLJ-DG-RT-0001.docx”。请完善 excel_to_word.py python代码实现以上需求
+
+2. 将2_生成器台账_结果.xlsx   exccel 表中的数据填入到2_新-聚乙烯结果_改.doc word 文档中，数据填写需要满足一下规则：
+
+   1）excel 表格中 B列“完成日期”将最晚日期填入到word 文档“检测人”所在的日期处和“审核”所在日期处；
+   2）excel 表格中 C列“委托单编号”填入word 文档表格第一列“委托单编号”表格列里。
+   3）excel 表格中 D列“检件编号”填入word 文档表格第2列“检测批号”表格这一列里。
+   4）excel 表格中 E列“焊口编号”填入word 文档表格第4列“焊口号”表格这一列里。
+   5）excel 表格中 E列“焊工号”填入word 文档表格第5列“焊工号”表格这一列里。
+   6）excel 表格中 M列“张数”填入word 文档表格第6列“返修张/处数”表格这一列里。
+
+
+   excel 表格路径为 “生成器\Excel\2_生成器台账_结果.xlsx”，word 文档模板为 “生成器\wod\2_新-聚乙烯结果_改.doc”。请新建一个python 文件（命名为NDT_result）用 python代码实现以上需求
