添加了三个新参数：工程名称、委托单位和检测方法，并实现了将这些参数值填入Word文档中对应位置的功能。

--- a/需求.md
+++ b/需求.md
@@ -21,6 +21,8 @@
    9）excel 表格中Q列“单元名称”选择第一个数据填入word 文档表格“单位工程名称：”处
    10）将“委托单编号”填入word 文档“通知单编号”右侧一格中
 
+   11）需要预留三个传参，分别为工程名称、委托单位、检测方法，这三个传参分别对应如下：
+   “工程名称”传参值需要代替word 文档中的“工程名称参数值”，“委托单位”传参值需要代替word 文档“委托单位参数值”，“检测方法”传参值需要代替word 文档“检测方法参数”
    excel 表格路径为 “生成器\Excel\2_生成器台账_结果.xlsx”，word 文档模板为 “生成器\wod\2_新-聚乙烯结果_改.docx”。请新建一个python 文件（命名为NDT_result）用 python代码实现以上需求
 
 
