--- a/需求.md
+++ b/需求.md
@@ -10,7 +10,7 @@
    5）excel 表格 G列"规格" 对应 word 文档 "焊口规格"
    6）excel 表格 H列"材质" 对应 word 文档 "焊口材质"
    7）excel 表格 O列"备注" 对应 word 文档 "备注"
-   8）excel 表格 Q列"单元名称" 代替 word 文档 "单位工程名称值"，同一个“委托单编号”只需选一个“单元名称”的数据填入即可。
+   8）excel 表格 Q列"单元名称" 代替 word 文档 "单元名称值"，同一个“委托单编号”只需选一个“单元名称”的数据填入即可。
    8）excel 表格 R列"焊接方法" 代替 word 文档 "焊接方法值"，同一个“委托单编号”只需选一个“焊接方法”的数据填入即可。
    9）excel 表格 S列"区号" 代替 word 文档 "区号值"，同一个“委托单编号”只需选一个“焊接方法”的数据填入即可。
    10）excel 表格 T列"单线号" 对应 word 文档 "单线号"
