增加Ray_Defect.py文件，实现了基于“射线检测记录：基础功能的填写。射线相关参数还未实现

--- a/需求.md
+++ b/需求.md
@@ -74,3 +74,25 @@
    11）需要预留三个传参，分别为工程名称、委托单位、检测方法，这三个传参分别对应如下：
    "工程名称"传参值需要代替word 文档中的"工程名称参数值"，"委托单位"传参值需要代替word 文档"委托单位参数值"，"检测方法"传参值需要代替word 文档"检测方法参数"
    
+
+
+4. 射线检测记录台账：
+   将"生成器\Excel\4_生成器台账-射线检测记录.xlsx"  exccel 表中的数据填入到 "生成器\wod\4_射线检测记录.docx" word 文档中，数据填写需要满足一下规则：
+   首先需要根据excel 表格中 C列"委托单编号"的数据和P列“γ射线”的数据进行分类，然后每一种"委托编号"且“γ射线”数据均相同时生成一份word 文档（当P列数据单元格为空时，则代表x射线），以下操作都需要在同一个"委托编号"和同一种“γ射线”的数据基础上实现。
+   将EPKJ拼接“委托单编号”的值代替word 文档中“委托单编号值”
+   将“γ射线”的值代替word 文档中“射源种类值”，但当“γ射线”的值为空时，文档中“射源种类值”的值也设置为空
+
+   1）excel 表格中 B列"完成日期"将最晚日期填入到word 文档"洗片人"、“拍片人”、“审核人”所在的日期处；
+   3）excel 表格中 D列"检件编号"填入word 文档表格第2列"检件编号"表格这一列里。
+   4）excel 表格中 E列"焊口编号"填入word 文档表格第3列"焊缝编号"表格这一列里。
+   5）excel 表格中 F列"焊工号"填入word 文档表格第4列"焊工号"表格这一列里。
+   6）excel 表格 I列"合格级别" 代替 word 文档 "合格级别值"，同一个“委托单编号”只需选一个“合格级别”的数据填入即可。
+   7）excel 表格 J列"检测比例" 代替 word 文档 "检测比例值"，同一个“委托单编号”只需选一个“检测比例”的数据填入即可。
+   8）excel 表格 R列"焊接方法" 代替 word 文档 "焊接方法值"，同一个“委托单编号”只需选一个“焊接方法”的数据填入即可。
+   9）excel 表格 V列"检测时机" 代替 word 文档 "检测时机值"，同一个“委托单编号”只需选一个“检测时机”的数据填入即可。
+   10）word 文档中“焦点尺寸值”需要根据“射源种类值”来决定，当为 x射线时，“焦点尺寸值”为2.5\*2.5,当“射线种类值”为γ射线时，“焦点尺寸值”为3\*3。
+   11）word 文档中“铅增感屏值”需要根据“射源种类值”来决定，当为 x射线时，“铅增感屏值”为0.03\*2,当“射线种类值”为γ射线时，“焦点尺寸值” 为柯达0.1\*2。
+   12）word 文档中“胶片等级值”需要根据“射源种类值”来决定，X射线为锐科R400,γ射线为柯达MX125。
+
+      13）excel 表格中 B列"完成日期"填入word 文档表格第6列"备注"表格这一列里。
+      14）word 文档表格第1列“序号”根据该文档中填入的“检件编号”的个数从1开始排序并写入。
