增加了射线检测记录中x射线和γ射线相关参数的填写

--- a/需求.md
+++ b/需求.md
@@ -94,5 +94,32 @@
    11）word 文档中“铅增感屏值”需要根据“射源种类值”来决定，当为 x射线时，“铅增感屏值”为0.03\*2,当“射线种类值”为γ射线时，“焦点尺寸值” 为柯达0.1\*2。
    12）word 文档中“胶片等级值”需要根据“射源种类值”来决定，X射线为锐科R400,γ射线为柯达MX125。
 
-      13）excel 表格中 B列"完成日期"填入word 文档表格第6列"备注"表格这一列里。
-      14）word 文档表格第1列“序号”根据该文档中填入的“检件编号”的个数从1开始排序并写入。
+   13）excel 表格中 B列"完成日期"填入word 文档表格第6列"备注"表格这一列里。
+   14）word 文档表格第1列“序号”根据该文档中填入的“检件编号”的个数从1开始排序并写入。
+   15）excel 表格中 G列"规格"需要首先做去重，即每种规格只保留一个，然后再填入word 文档表格"检件规格"所在列里。
+
+   X射线相关填写规则：
+   当“γ射线”的值为空即为x 射线时，需要调用“生成器\Excel\4_生成器台账-射线检测记录.xlsx ”进行以下规则匹配并填写"生成器\wod\4_射线检测记录.docx" word 文档：
+   逐行遍历"检件规格(mm×mm)"所在列，将每一单元格中的值和“生成器\Excel\4_生成器台账-射线检测记录.xlsx ”中的A列"检件规格" 进行搜索匹配，确定好所在的行后，再根据以下写入规则进行word 文档写入：
+   1）将excel中确定好的行B列“透照方式”中的值写入到word 文档“透照方式”所在列；
+   2）将excel中确定好的行C列“焦距”中的值写入到word 文档“焦距”所在列；
+   1）将excel中确定好的行D列“源强”中的值写入到word 文档“管电压源能量”所在列；
+   1）将excel中确定好的行G列“源活”中的值写入到word 文档“管电流源活度”所在列；
+   1）将excel中确定好的行H列“曝光时间”中的值写入到word 文档“曝光时间”所在列；
+   1）将excel中确定好的行J列“一次透照长度”中的值写入到word 文档“有效片长”所在列；
+
+   同理，γ射线相关填写需求，规则如下：
+   当“γ射线”的值为非空即为γ 射线时，需要调用“生成器\Excel\4_生成器γ射线指导书模版.xlsx ”进行以下规则匹配并填写"生成器\wod\4_射线检测记录.docx" word 文档：
+   逐行遍历"检件规格(mm×mm)"所在列，将每一单元格中的值和“生成器\Excel\4_生成器γ射线指导书模版.xlsx”中的A列"检件规格" 进行搜索匹配，确定好所在的行后，再根据以下写入规则进行word 文档写入：
+   1）将excel中确定好的行B列“透照方式”中的值写入到word 文档“透照方式”所在列；
+   2）将excel中确定好的行C列“焦距”中的值写入到word 文档“焦距”所在列；
+   1）将excel中确定好的行D列“源强”中的值写入到word 文档“管电流源活度”所在列；
+   1）将excel中确定好的行H列“一次透照长度”中的值写入到word 文档“有效片长”所在列；
+
+逐行遍历"检件规格(mm×mm)"所在列，判断有几种规格，并将数量填写到word 文档“透照参数序号”所在列，同时根据该文档中“检件编号”的数量决定在该列中填写几行。x射线和γ射线均遵从该规则。
+
+
+根据行号和规格数量智能填写序号值：
+如果当前行号小于规格总数，则填写对应的序号（从1开始）
+否则填写规格总数
+以上规则是你自己无缘无故增加的，不符合需求。正确规则应该是不需要判断行号和规格数量的关系，直接都填写规格总数。请修改相关代码@Ray_Defect.py 
