--- a/需求.md
+++ b/需求.md
@@ -116,10 +116,13 @@
    1）将excel中确定好的行D列“源强”中的值写入到word 文档“管电流源活度”所在列；
    1）将excel中确定好的行H列“一次透照长度”中的值写入到word 文档“有效片长”所在列；
 
-逐行遍历"检件规格(mm×mm)"所在列，判断有几种规格，并将数量填写到word 文档“透照参数序号”所在列，同时根据该文档中“检件编号”的数量决定在该列中填写几行。x射线和γ射线均遵从该规则。
+   逐行遍历"检件规格(mm×mm)"所在列，判断有几种规格，并将数量填写到word 文档“透照参数序号”所在列，同时根据该文档中“检件编号”的数量决定在该列中填写几行。x射线和γ射线均遵从该规则。
 
 
-根据行号和规格数量智能填写序号值：
-如果当前行号小于规格总数，则填写对应的序号（从1开始）
-否则填写规格总数
-以上规则是你自己无缘无故增加的，不符合需求。正确规则应该是不需要判断行号和规格数量的关系，直接都填写规格总数。请修改相关代码@Ray_Defect.py 
+   根据行号和规格数量智能填写序号值：
+   如果当前行号小于规格总数，则填写对应的序号（从1开始）
+   否则填写规格总数
+   以上规则是你自己无缘无故增加的，不符合需求。正确规则应该是不需要判断行号和规格数量的关系，直接都填写规格总数。请修改相关代码@Ray_Defect.py 
+
+   需要预留5个传参，分别为工程名称、委托单位、操作指导书编号、承包单位、设备型号，这5个传参分别对应如下：
+   "工程名称"传参值需要代替word 文档中的"工程名称值"，"委托单位"传参值需要代替word 文档"委托单位值"，"操作指导书编号"传参值需要代替word 文档"操作指导书编号值"，"承包单位"传参值需要代替word 文档"承包单位值"，"设备型号"传参值需要代替word 文档"设备型号值"
