--- a/需求.md
+++ b/需求.md
@@ -126,3 +126,23 @@
 
    需要预留5个传参，分别为工程名称、委托单位、操作指导书编号、承包单位、设备型号，这5个传参分别对应如下：
    "工程名称"传参值需要代替word 文档中的"工程名称值"，"委托单位"传参值需要代替word 文档"委托单位值"，"操作指导书编号"传参值需要代替word 文档"操作指导书编号值"，"承包单位"传参值需要代替word 文档"承包单位值"，"设备型号"传参值需要代替word 文档"设备型号值"
+
+
+5. 射线检测记录续：
+   将"生成器\Excel\5_生成器评片记录续表模版.xlsx"  exccel 表中的数据填入到 "生成器\wod\5_射线检测记录_续.docx" word 文档中，输出报告路径为“生成器\输出报告\5_射线检测记录续”。数据填写需要满足一下规则：
+   首先需要根据excel 表格中 C列"委托单编号"的数据和P列“γ射线”的数据进行分类，然后每一种"委托编号"且“γ射线”数据均相同时生成一份word 文档（当P列数据单元格为空时，则代表x射线），以下操作都需要在同一个"委托编号"和同一种“γ射线”的数据基础上实现。
+
+   将“EPKJ-”拼接“委托单编号”的值代替word 文档中“委托单编号值”
+   1）excel 表格中 B列"完成日期"将最晚日期填入到word 文档“评片人”、“审核人”所在的日期处；
+   3）excel 表格中 D列"检件编号"填入word 文档表格第1列"检件编号"表格这一列里。
+   4）excel 表格中 E列"焊口编号"填入word 文档表格第2列"焊缝编号"表格这一列里。
+   5）excel 表格中 F列"焊工号"填入word 文档表格第4列"焊工号"表格这一列里。
+   6）excel 表格中 G列"规格"填入word 文档表格第5列"规格"表格这一列里。
+
+   7）word 文档中的“片号”所在的列的填写规则需要根据“检件编号”所在一行M列的“张数”来一次进行填写（依次填写的意思就是先填完第一个“检件编号”的所有参数信息，再填下一个“检件编号”的所有参数信息），详细规则如下：
+   当M列“张数”值为1或4或5时，“片号”所在的列不填；
+   当M列“张数”值为2时，“片号”所在的依次填写1，2；
+   当M列“张数”值为3时，“片号”所在的依次填写1，2，3；
+   当M列“张数”值N大于等于6时，“片号”所在的依次填写1-2，2-3，3-4，4-5，5-6，N-1；
+
+
