更新X射线和γ射线相关填写规则，修改了对应的Excel模版路径，并添加了传参需求以替代Word文档中的相应值。

--- a/需求.md
+++ b/需求.md
@@ -99,8 +99,8 @@
    15）excel 表格中 G列"规格"需要首先做去重，即每种规格只保留一个，然后再填入word 文档表格"检件规格"所在列里。
 
    X射线相关填写规则：
-   当“γ射线”的值为空即为x 射线时，需要调用“生成器\Excel\4_生成器台账-射线检测记录.xlsx ”进行以下规则匹配并填写"生成器\wod\4_射线检测记录.docx" word 文档：
-   逐行遍历"检件规格(mm×mm)"所在列，将每一单元格中的值和“生成器\Excel\4_生成器台账-射线检测记录.xlsx ”中的A列"检件规格" 进行搜索匹配，确定好所在的行后，再根据以下写入规则进行word 文档写入：
+   当“γ射线”的值为空即为x 射线时，需要调用“生成器\Excel\4_生成器X射线指导书模版.xlsx ”进行以下规则匹配并填写"生成器\wod\4_射线检测记录.docx" word 文档：
+   逐行遍历"检件规格(mm×mm)"所在列，将每一单元格中的值和“生成器\Excel\4_生成器X射线指导书模版.xlsx ”中的A列"检件规格" 进行搜索匹配，确定好所在的行后，再根据以下写入规则进行word 文档写入：
    1）将excel中确定好的行B列“透照方式”中的值写入到word 文档“透照方式”所在列；
    2）将excel中确定好的行C列“焦距”中的值写入到word 文档“焦距”所在列；
    1）将excel中确定好的行D列“源强”中的值写入到word 文档“管电压源能量”所在列；
@@ -146,3 +146,16 @@
    当M列“张数”值N大于等于6时，“片号”所在的依次填写1-2，2-3，3-4，4-5，5-6，N-1；
 
 
+   X射线相关填写规则：
+   当“γ射线”的值为空即为x 射线时，需要调用“生成器\Excel\4_生成器X射线指导书模版.xlsx ”进行以下规则匹配并填写"生成器\wod\4_射线检测记录.docx" word 文档：
+   逐行遍历"规格"所在列，将每一单元格中的值和“生成器\Excel\4_生成器X射线指导书模版.xlsx ”中的A列"检件规格" 进行搜索匹配，确定好所在的行后，再根据以下写入规则进行word 文档写入：
+   1）将excel中确定好的行I列“像质计灵敏度”中的值写入到word 文档“像质计灵敏度”所在列；
+
+   同理，γ射线相关填写需求，规则如下：
+   当“γ射线”的值为非空即为γ 射线时，需要调用“生成器\Excel\4_生成器γ射线指导书模版.xlsx ”进行以下规则匹配并填写"生成器\wod\4_射线检测记录.docx" word 文档：
+   逐行遍历"规格"所在列，将每一单元格中的值和“生成器\Excel\4_生成器γ射线指导书模版.xlsx”中的A列"检件规格" 进行搜索匹配，确定好所在的行后，再根据以下写入规则进行word 文档写入：
+   1）将excel中确定好的行I列“像质计灵敏度”中的值写入到word 文档“像质计灵敏度”所在列；
+
+
+    需要预留3个传参，分别为工程名称、委托单位、操作指导书编号，这3个传参分别对应如下：
+   "工程名称"传参值需要代替word 文档中的"工程名称值"，"委托单位"传参值需要代替word 文档"委托单位值"，"操作指导书编号"传参值需要代替word 文档"操作指导书编号值".
