--- a/需求.md
+++ b/需求.md
@@ -46,12 +46,21 @@
    首先需要将excel 表格中 C列"委托单编号"的数据进行分类，然后每一种"委托编号"生成一份word 文档，以下操作都需要在同一个"委托编号"的数据基础上实现。
 
    1）excel 表格中 B列"完成日期"将最晚日期填入到word 文档"施工单位："、"监理单位："、"项目部/装置："和"检测单位："所在日期处；
+   2）excel 表格中 I列"合格级别"代替 word 文档 "合格级别值"，同一个“委托单编号”只需选一个“合格级别”的数据填入即可。
+   2）excel 表格中 Q列"单元名称"代替 word 文档 "单元名称值"，同一个“委托单编号”只需选一个“单元名称值”的数据填入即可。
+
+   3）excel 表格中 B列"完成日期" 将最晚日期代替 word 文档 "完成日期值"，同一个“委托单编号”只需选一个“完成日期值”的数据填入即可。
    3）excel 表格中 D列"检件编号"填入word 文档表格第1列"管线/检件编号"表格这一列里。
    4）excel 表格中 E列"焊口编号"填入word 文档表格第2列"焊口编号"表格这一列里。
-   5）excel 表格中 F列"焊工号"填入word 文档表格第5列"焊工号"表格这一列里。
-   7）excel 表格中 K列"返修补片"填入word 文档表格第6列"检测结果"表格这一列里。
-   8）excel 表格中 W列"实际不合格"填入word 文档表格第7列"返修张/处数"表格这一列里，若excel 中为空，则代表"0"，在word 中填入 " 0" 即可。
+   5）excel 表格中 G列"规格"填入word 文档表格第4列"规格"表格这一列里。
+   5）excel 表格中 H列"材质"填入word 文档表格第3列"材质"表格这一列里。
 
+   7）excel 表格中 L列"底片规格/张数"填入word 文档表格第5列"底片规格/数量（张）"表格这一列里。
+   8）excel 表格中 N列"合格张数"填入word 文档表格第6列"合格"表格这一列里。
+   5）excel 表格中 M列"张数"-N列"合格张数"填入word 文档表格第7列"不合格"表格这一列里。
+
+   需要预留5个传参，分别为工程名称、委托单位、检测单位、检测方法、检测标准，这5个传参分别对应如下：
+   "工程名称"传参值需要代替word 文档中的"工程名称值"，"委托单位"传参值需要代替word 文档"委托单位值"，"检测单位"传参值需要代替word 文档"检测单位值"，"检测标准"传参值需要代替word 文档"检测标准值"，"检测方法"传参值需要代替word 文档"检测方法值"
 
 3. 表面结果通知台账
    Mode2：
@@ -68,7 +77,7 @@
    8）excel 表格中 W列"实际不合格"填入word 文档表格第7列"返修张/处数"表格这一列里，若excel 中为空，则代表"0"，在word 中填入 " 0" 即可。
 
    6）excel 表格中 O列"备注"填入word 文档表格第8列"备注"表格这一列里。
-   9) excel 表格 Q列"单元名称" 代替 word 文档 "单元名称值"，同一个“委托单编号”只需选一个“单元名称”的数据填入即可。   
+   1) excel 表格 Q列"单元名称" 代替 word 文档 "单元名称值"，同一个“委托单编号”只需选一个“单元名称”的数据填入即可。   
    10）将"委托单编号"填入word 文档"通知单编号"右侧一格中
 
    11）需要预留三个传参，分别为工程名称、委托单位、检测方法，这三个传参分别对应如下：
