增加Ray_Detection_mode1.py代码，测试通过

--- a/需求.md
+++ b/需求.md
@@ -21,6 +21,27 @@
    14）需要预留5个传参，分别为工程名称、检测类别号、检测标准、检测方法、坡口形式，这5个传参分别对应如下：
    "工程名称"传参值需要代替word 文档中的"工程名称值"，"检测类别号"传参值需要代替word 文档"检测类别号值"，"检测标准"传参值需要代替word 文档"检测标准值"，"检测方法"传参值需要代替word 文档"检测方法值"，"坡口形式"传参值需要代替word 文档"坡口形式值"
 
+ Mode1：
+   将1_生成器台账_委托.xlsx exccel 表中的数据填入到1_射线检测委托台账_Mode1.docx文档中，输出报告保存路径为“生成器\输出报告\1_射线检测委托台账\1_射线检测委托台账_Mode1”。数据填写需要满足一下规则：
+   首先需要将excel 表格中 C列"委托单编号"的数据进行分类，然后每一种"委托编号"生成一份word 文档，以下操作都需要在同一个"委托编号"的数据基础上实现。
+   将“委托单编号”的值代替word 文档中“委托单编号值”
+   1）excel 表格中 A列委托日期将最晚日期填入到word 文档"施工单位"、"监理单位"、"项目部/装置"、"检测单位"所在的日期处
+   2）excel 表格中 D列"检件编号"填入word 文档"管道编号"这一列。
+   3）excel 表格 E列"焊口编号" 对应 word 文档 "焊口号"这一列；
+   4）exel 表格  F列"焊工号"  对应 word 文档 "焊工号"这一列；
+   5）excel 表格 G列"规格" 对应 word 文档 "焊口规格"这一列；
+   6）excel 表格 H列"材质" 对应 word 文档 "焊口材质"这一列；
+   7）excel 表格 O列"备注" 对应 word 文档 "备注"这一列；
+   8）excel 表格 Q列"单元名称" 代替 word 文档 "单元名称值"，同一个“委托单编号”只需选一个“单元名称”的数据填入即可。
+   8）excel 表格 R列"焊接方法" 代替 word 文档 "焊接方法值"，同一个“委托单编号”只需选一个“焊接方法”的数据填入即可。
+   9）excel 表格 S列"区号" 代替 word 文档 "区号值"，同一个“委托单编号”只需选一个“焊接方法”的数据填入即可。
+   10）excel 表格 T列"单线号" 对应 word 文档 "单线号"
+   11）excel 表格 V列"检测时机" 代替 word 文档 "检测时机值"，同一个“委托单编号”只需选一个“检测时机”的数据填入即可。
+   12）excel 表格 I列"合格级别" 代替 word 文档 "合格级别值"，同一个“委托单编号”只需选一个“合格级别”的数据填入即可。
+   13）excel 表格 J列"检测比例" 代替 word 文档 "检测比例值"，同一个“委托单编号”只需选一个“检测比例”的数据填入即可。
+   14）需要预留8个传参，分别为工程名称、委托单位、检测标准、验收规范、检测方法、检测技术等级、外观检查、坡口形式，这8个传参分别对应如下：
+   "工程名称"传参值需要代替word 文档中的"工程名称值"，"委托单位"传参值需要代替word 文档"委托单位值"，"检测标准"传参值需要代替word 文档"检测标准值"，"验收规范"传参值需要代替word 文档"验收规范值"，"检测方法"传参值需要代替word 文档"检测方法值"，"检测技术等级"传参值需要代替word 文档"检测技术等级值"，"外观检查"传参值需要代替word 文档"外观检查值"，"坡口形式"传参值需要代替word 文档"坡口形式值"
+
 2. RT结果通知单台账：
    Mode2：
    将"生成器\Excel\2_生成器台账_结果.xlsx"  exccel 表中的数据填入到 "生成器\wod\2_新-聚乙烯结果_改.docx" word 文档中，数据填写需要满足一下规则：
