根据“3_生成器表面结果.xlsx"  exccel 表sheet3“荣信聚乙烯PT””修改Surface_Defect_mode1.py和Surface_Defect.py；在gui.py GUI界面增加模块选择功能，实现调用不同word 模板的功能

--- a/需求.md
+++ b/需求.md
@@ -62,6 +62,7 @@
    "工程名称"传参值需要代替word 文档中的"工程名称参数值"，"委托单位"传参值需要代替word 文档"委托单位参数值"，"检测方法"传参值需要代替word 文档"检测方法参数"
    excel 表格路径为 "生成器\Excel\2_生成器台账_结果.xlsx"，word 文档模板为 "生成器\wod\2_新-聚乙烯结果_改.docx"。请新建一个python 文件（命名为NDT_result）用 python代码实现以上需求
 
+   
    Mode1：
    将"生成器\Excel\2_生成器台账_结果.xlsx"  exccel 表中的数据填入到 "生成器\wod\2_RT结果通知台账_Mode1.docx" word 文档中，数据填写需要满足一下规则：
    首先需要将excel 表格中 C列"委托单编号"的数据进行分类，然后每一种"委托编号"生成一份word 文档，以下操作都需要在同一个"委托编号"的数据基础上实现。
@@ -87,28 +88,52 @@
 
 3. 表面结果通知台账
    Mode2：
-   将"生成器\Excel\3_生成器表面结果.xlsx"  exccel 表中的数据填入到 "生成器\wod\3_表面结果通知单台账_Mode2.docx" word 文档中，数据填写需要满足一下规则：
+   将"生成器\Excel\3_生成器表面结果.xlsx"  exccel 表sheet3“荣信聚乙烯PT”中的数据填入到 "生成器\wod\3_表面结果通知单台账_Mode2.docx" word 文档中，数据填写需要满足一下规则：
    首先需要将excel 表格中 C列"委托单编号"的数据进行分类，然后每一种"委托编号"生成一份word 文档，以下操作都需要在同一个"委托编号"的数据基础上实现。
-   将“委托单编号”的值代替word 文档中“委托单号值”
+   将“委托单编号”的值代替word 文档中“委托单号编号值”
 
    1）excel 表格中 B列"完成日期"将最晚日期填入到word 文档"检测人"所在的日期处和"审核"所在日期处；
    2）excel 表格中 C列"委托单编号"填入word 文档表格第一列"委托单编号"表格列里。
    3）excel 表格中 D列"检件编号"填入word 文档表格第3列"单线号"表格这一列里。
    4）excel 表格中 E列"焊口编号"填入word 文档表格第4列"焊口号"表格这一列里。
    5）excel 表格中 F列"焊工号"填入word 文档表格第5列"焊工号"表格这一列里。
-   7）excel 表格中 K列"返修补片"填入word 文档表格第6列"检测结果"表格这一列里。
-   8）excel 表格中 W列"实际不合格"填入word 文档表格第7列"返修张/处数"表格这一列里，若excel 中为空，则代表"0"，在word 中填入 " 0" 即可。
+   7）excel 表格中 K列"焊口情况"填入word 文档表格第6列"检测结果"表格这一列里。
+   8）excel 表格中 L列"返修张/处数"填入word 文档表格第7列"返修张/处数"表格这一列里，若excel 中为空，则代表"0"，在word 中填入 " 0" 即可。
 
-   6）excel 表格中 O列"备注"填入word 文档表格第8列"备注"表格这一列里。
-   1) excel 表格 Q列"单元名称" 代替 word 文档 "单元名称值"，同一个“委托单编号”只需选一个“单元名称”的数据填入即可。   
-   10）将"委托单编号"填入word 文档"通知单编号"右侧一格中
 
-   11）需要预留三个传参，分别为工程名称、委托单位、检测方法，这三个传参分别对应如下：
-   "工程名称"传参值需要代替word 文档中的"工程名称参数值"，"委托单位"传参值需要代替word 文档"委托单位参数值"，"检测方法"传参值需要代替word 文档"检测方法参数"
+   9) excel 表格 O列"单元名称" 代替 word 文档 "单元名称值"，同一个“委托单编号”只需选一个“单元名称”的数据填入即可。   
+   10) excel 表格 N列"检测方法" 代替 word 文档 "检测方法值"，同一个“委托单编号”只需选一个“检测方法”的数据填入即可。   
+
+   11）需要预留2个传参，分别为工程名称、委托单位，这2个传参分别对应如下：
+   "工程名称"传参值需要代替word 文档中的"工程名称参数值"，"委托单位"传参值需要代替word 文档"委托单位参数值"
+
+
+   12）当检测方法为“硬度检测或YD”时，word 文档中“检测级别值”填写“力学   级”，当检测方法为“光谱检测或PMIN”时，word 文档中“检测级别值”填写“光谱分析  级”，当检测方法为“UT”时，word 文档中“检测级别值”填写“UT  级”，当检测方法为“PT”时，word 文档中“检测级别值”填写“PT  级”，当检测方法为“MT”时，word 文档中“检测级别值”填写“MT  级”，当检测方法为“RT”时，word 文档中“检测级别值”填写“RT  级”，当检测方法为“TOFD”时，word 文档中“检测级别值”填写“TOFD  级”，当检测方法为“PA”时，word 文档中“检测级别值”填写“PA  级”。
    
+Mode1：
+   将"生成器\Excel\3_生成器表面结果.xlsx"  exccel 表sheet3“荣信聚乙烯PT”中的数据填入到 "生成器\wod\3_表面结果通知单台账_Mode1.docx" word 文档中，生成报告保存路径为“生成器\输出报告\3_表面结果通知单台账_Mode1\”目录下。数据填写需要满足一下规则：
+   首先需要将excel 表格中 C列"委托单编号"的数据进行分类，然后每一种"委托编号"生成一份word 文档，以下操作都需要在同一个"委托编号"的数据基础上实现。
+   将“委托单编号”的值代替word 文档中“委托单号编号值”
+
+   1）excel 表格中 B列"完成日期"将最晚日期填入到word 文档"施工单位："、"监理单位："、"项目部/装置："和"检测单位："所在日期处；
+
+   2）excel 表格中 B列"完成日期" 将最晚日期代替 word 文档 "完成日期值"，同一个“委托单编号”只需选一个“完成日期值”的数据填入即可。
+   3）excel 表格中 D列"检件编号"填入word 文档表格第1列"检件编号"表格这一列里。
+   4）excel 表格中 E列"焊口编号"填入word 文档表格第2列"焊口编号"表格这一列里。
+   5）excel 表格中 G列"规格"填入word 文档表格第4列"规格"表格这一列里。
+   6）excel 表格中 H列"材质"填入word 文档表格第3列"材质"表格这一列里。
+   7）excel 表格中 I列"合格级别"代替 word 文档 "合格级别值"，同一个“委托单编号”只需选一个“合格级别”的数据填入即可。
+   8）excel 表格中 K列"焊口情况"填入word 文档表格第6列"合格"表格这一列里。
+   1) excel 表格 N列"检测方法" 代替 word 文档 "检测方法值"，同一个“委托单编号”只需选一个“检测方法”的数据填入即可。   
+   2)  excel 表格 O列"单元名称" 代替 word 文档 "单元名称值"，同一个“委托单编号”只需选一个“单元名称”的数据填入即可。   
+   11）excel 表格中 S列"检测数量"填入word 文档表格第5列"检测数量"表格这一列里。
+  
+
+   需要预留4个传参，分别为工程名称、委托单位、检测单位、检测标准，这4个传参分别对应如下：
+   "工程名称"传参值需要代替word 文档中的"工程名称值"，"委托单位"传参值需要代替word 文档"委托单位值"，"检测单位"传参值需要代替word 文档"检测单位值"，"检测标准"传参值需要代替word 文档"检测标准值"。
 
 
-4. 射线检测记录台账：
+1. 射线检测记录台账：
    将"生成器\Excel\4_生成器台账-射线检测记录.xlsx"  exccel 表中的数据填入到 "生成器\wod\4_射线检测记录.docx" word 文档中，数据填写需要满足一下规则：
    首先需要根据excel 表格中 C列"委托单编号"的数据和P列“γ射线”的数据进行分类，然后每一种"委托编号"且“γ射线”数据均相同时生成一份word 文档（当P列数据单元格为空时，则代表x射线），以下操作都需要在同一个"委托编号"和同一种“γ射线”的数据基础上实现。
    将EPKJ拼接“委托单编号”的值代替word 文档中“委托单编号值”
