给”RT结果台账mode2" 增加根据传参"检测方法"的值来增加检测级别值映射功能

--- a/需求.md
+++ b/需求.md
@@ -62,6 +62,8 @@
    "工程名称"传参值需要代替word 文档中的"工程名称参数值"，"委托单位"传参值需要代替word 文档"委托单位参数值"，"检测方法"传参值需要代替word 文档"检测方法参数"
    excel 表格路径为 "生成器\Excel\2_生成器台账_结果.xlsx"，word 文档模板为 "生成器\wod\2_新-聚乙烯结果_改.docx"。请新建一个python 文件（命名为NDT_result）用 python代码实现以上需求
 
+   12）根据传参“检测方法”的值来增加以下需求：当检测方法为“硬度检测或YD”时，word 文档中“检测级别值”填写“力学   级”，当检测方法为“光谱检测或PMIN”时，word 文档中“检测级别值”填写“光谱分析  级”，当检测方法为“UT”时，word 文档中“检测级别值”填写“UT  级”，当检测方法为“PT”时，word 文档中“检测级别值”填写“PT  级”，当检测方法为“MT”时，word 文档中“检测级别值”填写“MT  级”，当检测方法为“RT”时，word 文档中“检测级别值”填写“RT  级”，当检测方法为“TOFD”时，word 文档中“检测级别值”填写“TOFD  级”，当检测方法为“PA”时，word 文档中“检测级别值”填写“PA  级”。
+   
    
    Mode1：
    将"生成器\Excel\2_生成器台账_结果.xlsx"  exccel 表中的数据填入到 "生成器\wod\2_RT结果通知台账_Mode1.docx" word 文档中，数据填写需要满足一下规则：
