--- a/需求.md
+++ b/需求.md
@@ -152,7 +152,7 @@ Mode1：
    将"生成器\Excel\4_生成器台账-射线检测记录.xlsx"  exccel 表中的数据填入到 "生成器\wod\4_射线检测记录.docx" word 文档中，数据填写需要满足一下规则：
    首先需要根据excel 表格中 C列"委托单编号"的数据和P列“γ射线”的数据进行分类，然后每一种"委托编号"且“γ射线”数据均相同时生成一份word 文档（当P列数据单元格为空时，则代表x射线），以下操作都需要在同一个"委托编号"和同一种“γ射线”的数据基础上实现。
    将EPKJ拼接“委托单编号”的值代替word 文档中“委托单编号值”
-   将“γ射线”的值代替word 文档中“射源种类值”，但当“γ射线”的值为空时，文档中“射源种类值”的值也设置为空
+   将“γ射线”的值代替word 文档中“射源种类值”，但当“γ射线”的值为空时，文档中“射源种类值”的值也设置为X射线
 
    1）excel 表格中 B列"完成日期"将最晚日期填入到word 文档"洗片人"、“拍片人”、“审核人”所在的日期处；
    3）excel 表格中 D列"检件编号"填入word 文档表格第2列"检件编号"表格这一列里。
